# Qt-project

./: .gitignore  Qt.code-workspace  README.md
cmakeTest/: CMakeLists.txt  mainwindow.cpp
project1/: CMakeLists.txt
project2/: CMakeLists.txt
project3/: CMakeLists.txt
project3/app/: CMakeLists.txt
project3/mainwindow/: CMakeLists.txt
project4/: CMakeLists.txt  dialogpen.cpp  dialogpen.h  dialogpen.ui
qtTest/: mainwindow.h  qtTest.pro
三维图/散点图/scatter/: CMakeLists.txt
三维图/散点图/scatter/app/: CMakeLists.txt
三维图/散点图/scatter/mainwindow/form/: mainwindow.ui
三维图/散点图/scatter/mainwindow/include/: MyQ3DScatter.h  mainwindow.h
三维图/散点图/scatter/mainwindow/src/: MyQ3DScatter.cpp  mainwindow.cpp
三维图/柱图/bar/: CMakeLists.txt
三维图/柱图/bar/app/: CMakeLists.txt
三维图/柱图/bar/mainwindow/: CMakeLists.txt
三维图/柱图/bar/mainwindow/form/: mainwindow.ui
三维图/柱图/bar/mainwindow/include/: mainwindow.h
三维图/柱图/bar/mainwindow/src/: mainwindow.cpp
三维图/面图/elevation/: CMakeLists.txt
三维图/面图/elevation/app/: CMakeLists.txt
三维图/面图/elevation/mainwindow/form/: mainwindow.ui
三维图/面图/elevation/mainwindow/resources/: res.qrc
三维图/面图/elevation/mainwindow/src/: mainwindow.cpp
三维图/面图/surface/: CMakeLists.txt
三维图/面图/surface/app/: CMakeLists.txt
串口调试助手项目/assistant1/: CMakeLists.txt  test.txt
串口调试助手项目/assistant1/form/: mainwindow.ui
串口调试助手项目/assistant1/include/: mainwindow.h
串口调试助手项目/assistant1/src/: mainwindow.cpp
串口调试助手项目/assistant2/: CMakeLists.txt  保存命令字符串 copy.txt  保存命令字符串.txt
串口调试助手项目/assistant2/app/: CMakeLists.txt
串口调试助手项目/assistant2/event/: CMakeLists.txt
串口调试助手项目/assistant2/event/include/: comboxEvent.h
串口调试助手项目/assistant2/event/src/: comboxEvent.cpp
串口调试助手项目/assistant2/mainwindow/: CMakeLists.txt
串口调试助手项目/assistant2/mainwindow/form/: mainwindow.ui
串口调试助手项目/assistant2/mainwindow/include/: mainwindow.h
串口调试助手项目/assistant2/mainwindow/resources/: res.qrc
串口调试助手项目/assistant2/mainwindow/src/: mainwindow.cpp
串口调试助手项目/assistant2/util/: CMakeLists.txt
串口调试助手项目/assistant2/util/include/: customThread.h
串口调试助手项目/assistant2/util/src/: customThread.cpp
图表/图表1/chart1/: CMakeLists.txt
图表/图表1/chart1/app/: CMakeLists.txt
图表/图表1/chart2/: CMakeLists.txt
图表/图表1/chart2/app/: CMakeLists.txt
图表/图表1/chart2/mainwindow/: CMakeLists.txt
图表/图表1/chart绘图/chart/: CMakeLists.txt
图表/图表1/chart绘图/chart/mainwindow/: CMakeLists.txt
图表/图表1/chart绘图/chart/mainwindow/form/: mainwindow.ui  pendialog.ui
图表/图表1/chart绘图/chart/mainwindow/include/: CustomChartView.h  mainwindow.h  pendialog.h
图表/图表1/chart绘图/chart/mainwindow/resources/: res.qrc
图表/图表1/chart绘图/chart/mainwindow/src/: CustomChartView.cpp  mainwindow.cpp  pendialog.cpp
图表/视图关系/graphics/: CMakeLists.txt
图表/视图绘图/graphics/app/: CMakeLists.txt
图表/视图绘图/pie/: CMakeLists.txt
图表/视图绘图/pie/app/: CMakeLists.txt
图表/视图绘图/pie/mainwindow/: CMakeLists.txt
天气预报/weather/: CMakeLists.txt  weather.json
天气预报/weather/app/: CMakeLists.txt  main.cpp
天气预报/weather/day/: CMakeLists.txt
天气预报/weather/day/include/: day.h
天气预报/weather/day/src/: day.cpp
天气预报/weather/mainwindow/: CMakeLists.txt
天气预报/weather/mainwindow/form/: mainwindow.ui
天气预报/weather/mainwindow/include/: mainwindow.h  style.h
天气预报/weather/mainwindow/resources/: res.qrc
天气预报/weather/mainwindow/src/: mainwindow.cpp
天气预报/weather/utils/: CMakeLists.txt
天气预报/weather/utils/src/: CityCodeUtils.cpp
天气预报/weather/weather_api/: 全国统计用区划代码.sql
天气预报/weather/weather_api1/: README.md  weather_api.qrc
数据库/sql/sqlite/: CMakeLists.txt
数据库/sql/sqlite/app/: CMakeLists.txt
数据库/sql/sqlite/mainwindow/: CMakeLists.txt
网络调试助手/client/: CMakeLists.txt
网络调试助手/client/app/: CMakeLists.txt
网络调试助手/client/mainwindow/: CMakeLists.txt
网络调试助手/client/mainwindow/form/: mainwindow.ui
网络调试助手/client/mainwindow/include/: mainwindow.h
网络调试助手/client/mainwindow/src/: mainwindow.cpp
网络调试助手/server/: CMakeLists.txt
网络调试助手/server/app/: CMakeLists.txt
网络调试助手/server/customWidget/: CMakeLists.txt
网络调试助手/server/customWidget/include/: socketComboBox.h
网络调试助手/server/customWidget/src/: socketComboBox.cpp
网络调试助手/server/mainwindow/: CMakeLists.txt
网络调试助手/server/mainwindow/form/: mainwindow.ui
网络调试助手/server/mainwindow/include/: mainwindow.h
网络调试助手/server/mainwindow/src/: mainwindow.cpp
自定义可视化控件/仪表盘/dashboard/: CMakeLists.txt
自定义可视化控件/仪表盘/dashboard/app/: CMakeLists.txt
自定义可视化控件/仪表盘/vehiclepanet/: CMakeLists.txt
自定义可视化控件/仪表盘/vehiclepanet/app/: CMakeLists.txt
自定义可视化控件/仪表盘/vehiclepanet/mainwindow/: CMakeLists.txt
自定义可视化控件/自定义按钮/button/: CMakeLists.txt
自定义可视化控件/自定义按钮/button/app/: CMakeLists.txt
自定义可视化控件/自定义按钮/button/mainwindow/: CMakeLists.txt
自定义可视化控件/自定义按钮/button/myButton/: CMakeLists.txt
自定义可视化控件/雷达/radio/: CMakeLists.txt
自定义可视化控件/雷达/radio/app/: CMakeLists.txt
自定义可视化控件/雷达/radio/mainwindow/: CMakeLists.txt
记事本项目/notebook1/: CMakeLists.txt
记事本项目/notebook1/form/: mainwindow.ui
记事本项目/notebook1/resources/: res.qrc
记事本项目/notebook1/src/: mainwindow.cpp
记事本项目/notebook2/: CMakeLists.txt
记事本项目/notebook2/form/: mainwindow.ui
记事本项目/notebook2/include/: mainwindow.h
记事本项目/notebook2/src/: mainwindow.cpp
记事本项目/notebook3/: CMakeLists.txt
记事本项目/notebook3/include/: mainwindow.h
记事本项目/notebook3/src/: main.cpp  mainwindow.cpp
记事本项目/notebook4/: CMakeLists.txt  readme.md  test.txt  test1.txt
记事本项目/notebook4/form/: mainwindow.ui
记事本项目/notebook4/include/: mainwindow.h
记事本项目/notebook4/src/: mainwindow.cpp
记事本项目/notebook5/: CMakeLists.txt  untitled3.txt
记事本项目/notebook5/form/: mainwindow.ui
记事本项目/notebook5/include/: mainwindow.h
记事本项目/notebook5/src/: mainwindow.cpp
记事本项目/notebook6/: CMakeLists.txt  untitled.txt  untitled4.txt
记事本项目/notebook6/form/: mainwindow.ui
记事本项目/notebook6/include/: mainwindow.h  myTextEdit.h  mybutton.h
记事本项目/notebook6/resources/: res.qrc
记事本项目/notebook6/src/: mainwindow.cpp
记事本项目/notebook6/src/MyButton/: mybutton.cpp
记事本项目/notebook6/src/MyTextEdit/: myTextEdit.cpp
记事本项目/notebook7/: CMakeLists.txt  untitled1.txt
记事本项目/notebook7/include/: mainwindow.h
记事本项目/notebook7/src/: mainwindow.cpp
(+47 files in other folders)
